fixed flexbox overflow

--- a/src/app/about-me/about-me.component.css
+++ b/src/app/about-me/about-me.component.css
@@ -2,7 +2,15 @@
 {
     height: 100%;
     width: 100%;
+    overflow: auto;
+}
+
+.content-container
+{
+    height: 100%;
+    width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
