--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -2,11 +2,17 @@
 {
     height: 100%;
     width: 100%;
+    overflow: auto;
+}
+
+.content-container
+{
+    height: 100%;
+    width: 100%;
     display: flex;
-    flex: 1;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: auto;
 }
 
 h1
